Make the scripts bundled with vite. Cleanup the new span code, debug debug debug

--- a/potato/templates/id_login_home.html
+++ b/potato/templates/id_login_home.html
@@ -8,8 +8,6 @@
 
     <link rel="icon" type="image/png" href="https://colorlib.com/etc/lf/Login_v1/images/icons/favicon.ico">
 
-
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/bootstrap.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/font-awesome.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/animate.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/hamburgers.css') }}">
@@ -19,202 +17,9 @@
     
     <meta name="robots" content="noindex, follow">
 
-    <script>
-      function login() {
-          if (check_input_fields("login")==false) {
-              return false;
-          }
-          var email = document.getElementById('login_email').value;
-          var password = sha256(document.getElementById('login_pass').value);
-
-
-          // Sends the post message to the server which will let us update the
-          // currently displayed content
-          // The rest of this code assumes you are not using a library.
-          // It can be made less wordy if you use one.
-          var form = document.createElement("form");
-          form.setAttribute("method", "post");
-          form.setAttribute("action", "login");
-
-          var hiddenField = document.createElement("input");
-          hiddenField.setAttribute("type", "hidden");
-          hiddenField.setAttribute("name", "src");
-          hiddenField.setAttribute("value", "home");
-          form.appendChild(hiddenField);
-          
-          var hiddenField = document.createElement("input");
-          hiddenField.setAttribute("type", "hidden");
-          hiddenField.setAttribute("name", "action");
-          hiddenField.setAttribute("value", "login");
-          form.appendChild(hiddenField);
-
-          hiddenField = document.createElement("input");
-          hiddenField.setAttribute("type", "hidden");
-          hiddenField.setAttribute("name", "email");
-          hiddenField.setAttribute("value", email);
-          form.appendChild(hiddenField);
-
-          hiddenField = document.createElement("input");
-          hiddenField.setAttribute("type", "hidden");
-          hiddenField.setAttribute("name", "pass");
-          hiddenField.setAttribute("value", password);
-          form.appendChild(hiddenField);
-
-          document.body.appendChild(form);
-          form.submit();
-      }
-
-      function signup() {
-          if (check_input_fields("signup")==false) {
-              return false;
-          }
-          var email = document.getElementById('signup_email').value;
-          var password = sha256(document.getElementById('signup_pass').value);
-          //var username = document.getElementById('signup_username').value;
-
-          // Sends the post message to the server which will let us update the
-          // currently displayed content
-          // The rest of this code assumes you are not using a library.
-          // It can be made less wordy if you use one.
-          var form = document.createElement("form");
-          form.setAttribute("method", "post");
-          form.setAttribute("action", "signup");
-
-          var hiddenField = document.createElement("input");
-          hiddenField.setAttribute("type", "hidden");
-          hiddenField.setAttribute("name", "action");
-          hiddenField.setAttribute("value", "signup");
-          form.appendChild(hiddenField);
-
-          hiddenField = document.createElement("input");
-          hiddenField.setAttribute("type", "hidden");
-          hiddenField.setAttribute("name", "email");
-          hiddenField.setAttribute("value", email);
-          form.appendChild(hiddenField);
-
-          hiddenField = document.createElement("input");
-          hiddenField.setAttribute("type", "hidden");
-          hiddenField.setAttribute("name", "pass");
-          hiddenField.setAttribute("value", password);
-          form.appendChild(hiddenField);
-
-          /* Currently we simply use email as the username
-          hiddenField = document.createElement("input");
-          hiddenField.setAttribute("type", "hidden");
-          hiddenField.setAttribute("name", "username");
-          hiddenField.setAttribute("value", username);
-          form.appendChild(hiddenField);
-           */
-
-          document.body.appendChild(form);
-          form.submit();
-      }
-
-      // check username for registration
-      function validateUsername(str) {
-            var error = "";
-            var illegalChars = /\W/; // allow letters, numbers, and underscores
-
-            if (str == "") {
-                error = "&bull; Please enter Username<br>";
-            } else if ((str.length < 5) || (str.length > 15)) {
-                error = "&bull; Username must have 5-15 characters<br>";
-            } else if (illegalChars.test(str)) {
-            error = "&bull; Please enter valid Username. Use only numbers and alphabets<br>";
-            } else {
-                error = "";
-            }
-            return error;
-        }
-
-      // check all input fields
-      function check_input_fields(action) {
-          var msg_key = action + "_error";
-          if (validateEmail(document.getElementById(action + '_email').value, action) == false) {
-              document.getElementById(action + '_error').innerHTML = "Invalid email address";
-              return false;
-          } else if (validatePassword(document.getElementById(action + '_pass').value, action) == false) {
-              //document.getElementById('signup_error').innerHTML = "Invalid email address";
-              return false;
-          } else if (confirmPassword(action) == false) {
-              return false;
-          }
-          return true;
-      }
-
-      // check email for registration
-      function validateEmail(email, action) {
-          var msg_key = action + "_error";
-         if (/^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$/.test(email)) {
-             document.getElementById(msg_key).innerHTML = "";
-            return true;
-          }
-         else{
-             document.getElementById(msg_key).innerHTML = "Invalid email address";
-             return false;
-         }
-        }
-
-      // Depreciated: event function for email textbox
-      function validateEmail_event(e) {
-          if (validateEmail(e.value) == false) {
-              //alert("You have entered an invalid email address!")
-              document.getElementById('signup_error').innerHTML = "Invalid email address";
-          }
-          else{
-              document.getElementById('signup_error').innerHTML = "";
-          }
-      }
-
-      // check password for registration
-    function validatePassword(password, action) {
-          var pw = password //document.getElementById("signup_password").value;
-          var msg_key = action + "_error";
-          //check empty password field
-          if(pw == "") {
-             document.getElementById(msg_key).innerHTML = "Password cannot be empty";
-             return false;
-          }
-
-         //minimum password length validation
-          if(pw.length < 6) {
-             document.getElementById(msg_key).innerHTML = "Password length must be at least 6 characters";
-             return false;
-          }
-
-        //maximum length of password validation
-          if(pw.length > 15) {
-             document.getElementById(msg_key).innerHTML = "Password length must not exceed 15 characters";
-             return false;
-          }
-
-          //if(action == "signup") {
-          //    return confirmPassword(action);
-          //}
-
-          document.getElementById(msg_key).innerHTML = "";
-          return true;
-    }
-
-     // check confirmation password
-    function confirmPassword(action) {
-
-          var msg_key = action + "_error";
-          var pw1 = document.getElementById("signup_pass").value;
-          var pw2 = document.getElementById("pass_again").value;
-          //alert(pw1)
-          if (pw1 != pw2) {
-              document.getElementById(msg_key).innerHTML = "Password not match";
-              return false;
-          }
-          document.getElementById(msg_key).innerHTML = "";
-          return true;
-    }
-
-    // Display error message when registration failed
-
-    </script>
-
+    {{ custom_js | safe }}
+    
+    <script src="{{ url_for('static',filename='main.js') }}" defer></script>
     
   </head>
   <body>
@@ -336,24 +141,5 @@
         </div>
       </div>
     </div>
-
-    <script src="{{ url_for('static',filename='jquery-3.js') }}"></script>
-    <script src="{{ url_for('static',filename='popper.js') }}"></script>
-    <script src="{{ url_for('static',filename='bootstrap.js') }}"></script>
-    <script src="{{ url_for('static',filename='select2.js') }}"></script>
-    <script src="{{ url_for('static',filename='tilt.js') }}"></script>
-    <script src="{{ url_for('static',filename='sha256.js') }}"></script>
-    
-    <script>
-      $('.js-tilt').tilt({
-	  scale: 1.1
-      })
-    </script>
-
-    <script async="" src="js"></script>
-
-    <script src="{{ url_for('static',filename='main.js') }}"></script>
-    <!-- <script defer="defer" src="beacon.js" data-cf-beacon="{&quot;rayId&quot;:&quot;661ee9948aa12d64&quot;,&quot;token&quot;:&quot;cd0b4b3a733644fc843ef0b185f98241&quot;,&quot;version&quot;:&quot;2021.5.2&quot;,&quot;si&quot;:10}"></script> -->
-
 
 </body></html>
