--- a/potato/templates/signup.html
+++ b/potato/templates/signup.html
@@ -8,8 +8,6 @@
 
     <link rel="icon" type="image/png" href="https://colorlib.com/etc/lf/Login_v1/images/icons/favicon.ico">
 
-
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/bootstrap.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/font-awesome.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/animate.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/hamburgers.css') }}">
@@ -19,39 +17,9 @@
     
     <meta name="robots" content="noindex, follow">
 
-    <script>
-      function login() {
+    {{ custom_js | safe }}
 
-          var email = document.getElementById('email').value;
-          var password = document.getElementById('pass').value;
-
-
-          // Sends the post message to the server which will let us update the
-          // currently displayed content
-          // The rest of this code assumes you are not using a library.
-          // It can be made less wordy if you use one.
-          var form = document.createElement("form");
-          form.setAttribute("method", "post");
-          form.setAttribute("action", "login");
-          
-          var hiddenField = document.createElement("input");
-          hiddenField.setAttribute("type", "hidden");
-          hiddenField.setAttribute("name", "email");
-          hiddenField.setAttribute("value", email);
-          form.appendChild(hiddenField);
-
-          hiddenField = document.createElement("input");
-          hiddenField.setAttribute("type", "hidden");
-          hiddenField.setAttribute("name", "pass");
-          hiddenField.setAttribute("value", password);
-          form.appendChild(hiddenField);
-
-          document.body.appendChild(form);
-          form.submit();
-      }
-      
-    </script>
-
+    <script src="{{ url_for('static',filename='main.js') }}" defer></script>
     
   </head>
   <body>
@@ -105,23 +73,4 @@
         </div>
       </div>
     </div>
-
-    <script src="{{ url_for('static',filename='jquery-3.js') }}"></script>
-    <script src="{{ url_for('static',filename='popper.js') }}"></script>
-    <script src="{{ url_for('static',filename='bootstrap.js') }}"></script>
-    <script src="{{ url_for('static',filename='select2.js') }}"></script>
-    <script src="{{ url_for('static',filename='tilt.js') }}"></script>
-    
-    <script>
-      $('.js-tilt').tilt({
-	  scale: 1.1
-      })
-    </script>
-
-    <script async="" src="js"></script>
-
-    <script src="{{ url_for('static',filename='main.js') }}"></script>
-    <!-- <script defer="defer" src="beacon.js" data-cf-beacon="{&quot;rayId&quot;:&quot;661ee9948aa12d64&quot;,&quot;token&quot;:&quot;cd0b4b3a733644fc843ef0b185f98241&quot;,&quot;version&quot;:&quot;2021.5.2&quot;,&quot;si&quot;:10}"></script> -->
-
-
 </body></html>
