--- a/potato/templates/user.html
+++ b/potato/templates/user.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <script src="jquery-3.3.1.min.js"></script>
+        { custom_js | safe }
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <style>
@@ -57,73 +57,5 @@
 
         <input type="hidden" name="f" id="f" value="{{firstname}}">
         <input type="hidden" name="l" id="l" value="{{lastname}}">
-
-        <script>
-            document.onkeydown = check_key;
-            function check_key(e) {
-                new_stories(e, document.getElementById('f').value, document.getElementById('l').value)
-            }
-        </script>
-
-        <script>
-            // We submit a new post to the same (user/namepoint) endpoint
-            function post(params) {
-                // The rest of this code assumes you are not using a library.
-                // It can be made less wordy if you use one.
-                var form = document.createElement("form");
-                form.setAttribute("method", "post");
-                form.setAttribute("action", "namepoint");
-
-                for (var key in params) {
-                    if (params.hasOwnProperty(key)) {
-                        var hiddenField = document.createElement("input");
-                        hiddenField.setAttribute("type", "hidden");
-                        hiddenField.setAttribute("name", key);
-                        hiddenField.setAttribute("value", params[key]);
-
-                        form.appendChild(hiddenField);
-                    }
-                }
-
-                document.body.appendChild(form);
-                form.submit();
-            }
-
-            function new_stories(event, first, last) {
-                var x = event.keyCode;
-                console.log(x)
-                console.log(first)
-                console.log(last)
-                var ism = "";
-                if (x == 37) { // Left
-                    ism = "n";
-                }
-                else if (x == 39) { // Right
-                    ism = "y";
-                }
-                else if (x == 40) { // Down
-                    ism = "b";
-                }
-                else if (x == 32) { // Spacebar
-                    ism = "go_back";
-                }
-                else {
-                    return
-                }
-
-                var post_req = {
-                    firstname: first,
-                    lastname: last,
-                    is_match: ism
-                }
-
-                post(post_req)
-
-            }
-
-        </script>
-
-
-
     </body>
 </html>
